--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -18,3 +18,5 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_FITNESS_DB_81D8F }}'
           channelId: live
           projectId: fitness-db-81d8f
+        env:
+          FIREBASE_CLI_EXPERIMENTS: webframeworks
